--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -76,5 +76,6 @@ $on-laptop:        800px !default;
   "minima/layout",
   "minima/syntax-highlighting",
   "minima/fontawesome",
-  "minima/flex"
+  "minima/flex",
+  "minima/graphs"
 ;
