--- a/_sass/minima/_flex.scss
+++ b/_sass/minima/_flex.scss
@@ -19,6 +19,12 @@
         justify-content: flex-start;
     }
 
+    &__projects {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: flex-start;
+    }
+
     &__affiliations {
         display: flex;
         flex-flow: row wrap;
