--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -27,7 +27,7 @@ layout: default
     </div>
     
     <div class="col3">
-        <a href="{{ site.url }}"><i class="fa fa-arrow-left"></i> Back</a>
+        <a href="{{ site.baseurl }}/projects"><i class="fa fa-arrow-left"></i> Back to list</a>
     </div>
     <div class="col9 line-space {% unless page.logo %}bottom-padding{% endunless %}">
         {{ page.description }}
